--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/hooks": "^4.2.12",
     "@mantine/modals": "^4.2.12",
     "@mantine/notifications": "^4.2.12",
+    "dayjs": "^1.11.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
